fixed issues on small screen

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -265,7 +265,7 @@ footer {
                 margin: 0 auto;
             }
             img {
-                width: 230px;
+                width: 200px;
             }
         }
     }
@@ -304,9 +304,9 @@ footer {
 
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 320px) {
     main {
-        height: 60vh;
+        height: 80vh;
     }
     #buttons {
         a {
